11-ingress-rules/longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: longhorn-frontend-ingress
  namespace: longhorn-system

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - longhorn.akashlab.local
      secretName: wildcard-akashlab-tls

  rules:
    - host: longhorn.akashlab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
